assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;200;300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  border: 0;
}
/*------------------------------Logo */

.logo {
  font-family: "Great Vibes", sans-serif;
  font-size: 36px;
  letter-spacing: 3px;
  padding-bottom: 0;
  margin-right: 0;
}

/*------------------------------Backgrounds */

#bg-index-outer {
  height: 100vh;
  width: 100%;
  overflow: hidden;
  position: relative;
}

.bg-index {
  height: 100vh;
  width: 100%;
  background: url("../images/wedding-sunset.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

#bg-portfolio {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border: 0;
  background: url("../images/wedding-sunset.jpg");
  background-repeat: repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  z-index: -1;
}

.bg-about {
  height: 100vh;
  width: 100%;
  background: url("../images/wedding-sweetness.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

.bg-contact {
  height: 100vh;
  width: 100%;
  background: url("../images/wedding-bride.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

.opaque-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.3);
  transition: all 0.75s ease;
  -moz-transition: all 0.75s ease;
  -webkit-transition: all 0.75s ease;
  z-index: 3;
}

#photo {
  clear: both;
  line-height: 0;
  column-count: 4;
  column-gap: 0px;
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: 2;
  border: 0;
}

#photo img {
  width: 100%;
  border: 0;
}

.bg-color-footer {
  background-color: #777777;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

/*------------------------------Navbar */

.navbar {
  top: 5px;
  margin-bottom: 0;
  border: 0;
  width: 100%;
  height: 60px;
  z-index: 3;
}

.navbar .navbar-toggler {
  border: 0;
  border-radius: 0;
}

.navbar-nav {
  padding-left: 15px;
  margin-bottom: 10px;
}

.nav-item {
  font-family: "Raleway", sans-serif;
  font-weight: 300;
  font-size: 20px;
  color: #fff;
  padding: 0px 15px;
  text-decoration: none;
}

.nav-item-border {
  border-left: 1px solid;
}

.navbar-collapse {
  margin-top: 0.5rem;
  z-index: 4;
}

.navbar-dark .navbar-nav .nav-link {
  color: rgba(235, 235, 235, 0.75);
}

/*----------------------------Footer */

#footer {
    position: fixed;
    bottom: 0px;
    width: 100%;
    margin: 0;
    z-index: 10;
}

.row {
    margin: 0;
}

#footer-padding {
    padding-left: 0;
    padding-right: 0;
}

.list-inline {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.list-inline-item {
  padding: 0;
  margin: 0;
}

.list-inline-item:not(:last-child) {
    margin-right: 0;
}

.social-links {
  text-align: center;
  z-index: inherit;
}

.social-links i {
  font-size: 140%;
  color: #fafafa;
  padding: 10px;
}

/*----------------------------Hover.css */

.hvr-sweep-to-bottom:before {
  background: rgba(255, 255, 255, 0.2);
  height: 100%;
}

/*----------------------------Media Queries */

@media screen and (max-width: 960px) {
      #photo {
    column-count: 3;
  }
}

@media screen and (max-width: 720px) {
  #photo {
    column-count: 2;
  }
}

@media (max-width: 576px) {
  .navbar-nav {
    padding-left: 0px;
  }
  .nav-item {
    font-size: 16px;
    margin-left: 5px;
  }

  .nav-item-border {
    border-left: none;
  }

  .hvr-sweep-to-bottom:before {
    width: 24vw;
  }
}

@media (min-width: 576px) {
  .logo {
    font-size: 44px;
  }
}

/*----------------------------Animations */
/*
.bg-animation {
  animation-name: bg-zoom;
  animation-duration: 5s;
  animation-fill-mode: forwards;
}

@keyframes bg-zoom {
  from {
    transform: scale(1);
  }
  to {
    transform: scale(1.05);
  }
}

